========================
0.0.62
========================

- fixed `NEWMACRO()` compiler
- added `flowstream.secrets` (something similar like variables)
- improved applying of `flowstream.variables`
- fixed initializing of HTTP server with unix-socket
- added support for Windows named pipe

========================
0.0.61
========================

- added NoSQL support for QueryBuilder
- fixed FlowStream identifiers when registering component
- fixed schema name in the logs when `CONF.logger` is enabled
- extended `download` argument in the `$.controller.file(filename, [download])` by adding support for `Boolean`
- extended `CONVERT()` by adding support for advanced arrays e.g. `key: [name: String, price: 30]`
- added `F.frameworkless(debug, options, [callback])` that executes HTTP server without Total.js dependencies
- updated `PROXY()` method by adding `check` argument
- fixed `copypath` functionality in the `PROXY()` method
- added auto clearing cache for the `CONVERT()` method
- extended `CORS()` method by returning instance of the route (that can be dynamically removed)
- extended `FlowStream` connections by adding the `color` attribute
- added method `U.set()`
- added method `U.get()`
- added `CONF.default_shell {String}`
- added `SHELL(command, callback, [cwd])` for executing of shell

========================
0.0.60
========================

- added a validation for `Byte`, `TinyInt` and `SmallInt` types in the schemas
- fixed `COPY()` method
- fixed `default_root` config option for static files
- fixed `/versions` file with applied `default_root`
- fixed a nullable argument in `U.getContentType()`
- fixed HTTP cache in `FileStorage`
- added `QueryBuilder.check()` for checking existence of record
- fixed decompression bigger messages in the WebSocket
- updated `NEWFORK()` and `NEWTHREAD()` by adding support for `~absolute/path/to/worker.js` in `name` argument

========================
0.0.59
========================
